# n64-gba

./: CMakeLists.txt  README.md
src/: bus.c  bus.h  gba.c  gba.h  ioreg_util.h  log.h  main.c  ppu.c  ppu.h  util.h
src/arm7tdmi/: CMakeLists.txt  arm7tdmi.c  arm7tdmi.h  shifts.c  shifts.h  sign_extension.c  sign_extension.h  software_interrupt.h
src/arm7tdmi/arm_instr/: arm_instr.h  block_data_transfer.c  data_processing.c  single_data_transfer.c  status_transfer.c
src/arm7tdmi/thumb_instr/: multiple_load_store.c  push_pop_registers.c  thumb_instr.h
tools/: bswap.py
